--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ click==8.2.2
 colorama==0.4.6
 decorator==5.1.1
 distlib==0.3.9
+exchange_calendars==4.11.1
 executing==2.1.0
 fastapi==0.116.1
 fastapi_poe==0.0.67
@@ -22,6 +23,7 @@ ibapi @ file:///C:/TWS%20API/source/pythonclient
 idna==3.10
 ipython==8.29.0
 jedi==0.19.1
+korean-lunar-calendar==0.3.1
 matplotlib-inline==0.1.7
 mkl-service==2.4.0
 mkl_fft @ file:///C:/b/abs_64riv3lfyn/croot/mkl_fft_1751310924052/work
@@ -31,6 +33,7 @@ numexpr @ file:///C:/b/abs_3buvfgcf6r/croot/numexpr_1755766488094/work
 numpy @ file:///C:/b/abs_1806g65zrg/croot/numpy_and_numpy_base_1755590869815/work/dist/numpy-2.2.5-cp313-cp313-win_amd64.whl#sha256=fbfe17c9da08e510bbb46f1a97940e58092e6d31daba935a2ccba17cd69fb165
 packaging==24.1
 pandas @ file:///C:/b/abs_58a1hlvjeo/croot/pandas_1756466410850/work/dist/pandas-2.3.2-cp313-cp313-win_amd64.whl#sha256=e3d25986bd6f7ec53acbba8bf94ee4f49c11b115835d0b9a4c62809e4f788a80
+pandas_market_calendars==5.1.1
 parso==0.8.4
 pipenv==2024.4.0
 platformdirs==4.3.6
@@ -39,6 +42,7 @@ pure_eval==0.2.3
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.18.0
+pyluach==2.2.0
 python-dateutil @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/python-dateutil_1729038406576/work
 pytz @ file:///C:/b/abs_f8wdzeix0n/croot/pytz_1752135878094/work
 requests==2.32.3
@@ -48,6 +52,7 @@ sniffio==1.3.1
 sse-starlette==3.0.2
 stack-data==0.6.3
 starlette==0.47.2
+toolz==1.0.0
 traitlets==5.14.3
 typing-inspection==0.4.1
 typing_extensions==4.14.1
